[package]
name = "boba-script"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*", "interpreter"]

[dependencies]
boba-script-ast = { path = "./crates/ast" }
boba-script-engine = { path = "./crates/engine" }
boba-script-parser = { path = "./crates/parser" }
boba-script-lexer = { path = "./crates/lexer" }
