[package]
name = "boba-script"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
boba-script-ast = { path = "crates/ast" }
boba-script-parser = { path = "crates/parser" }
boba-script-lexer = { path = "crates/lexer" }
boba-script-program = { path = "crates/program" }
