[package]
name = "boba-script-parser"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.21.0"

[dependencies]
derive_more = { version = "1.0", features = ["display"] }
lalrpop-util = { version = "0.21.0", default-features = false }
boba-script-lexer = { path = "../lexer" }
boba-script-ast = { path = "../ast" }
